# rag-postgres-openai-python

./: .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  azure.yaml  convert_csv_json.py  data.csv  data.json  locustfile.py  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml
docs/: README.md  customize_data.md  deploy_existing.md  evaluation.md  loadtesting.md  monitoring.md  rag_flow.md  safety_evaluation.md  using_entra_auth.md
evals/: README.md  eval_config.json  evaluate.py  generate_ground_truth.py  generate_prompt.jinja2  generate_prompt.txt  ground_truth.json  ground_truth.jsonl  requirements.txt  safety_evaluation.py  safety_results.json
infra/: backend-dashboard.bicep  main.bicep  main.parameters.json  web.bicep
scripts/: load_python_env.sh  pre_down.ps1  pre_down.py  pre_down.sh  setup_openai_role.sh  setup_postgres_azurerole.ps1  setup_postgres_azurerole.sh  setup_postgres_database.ps1  (+3 more)
src/: entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
src/backend/: Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
src/backend/fastapi_app/: __init__.py  api_models.py  dependencies.py  embeddings.py  frontend_routes.py  globals.py  openai_clients.py  postgres_engine.py  postgres_models.py  postgres_searcher.py  query_rewriter.py  rag_advanced.py  rag_base.py  rag_simple.py  seed_data.json  setup_postgres_azurerole.py  setup_postgres_database.py  setup_postgres_seeddata.py  update_embeddings.py
src/backend/fastapi_app/prompts/: answer.txt  query.txt  query_fewshots.json
src/backend/fastapi_app/routes/: api_routes.py  frontend_routes.py
src/backend/rag_app/: __init__.py  api_models.py  api_routes.py  embeddings.py  main.py  postgres_engine.py  postgres_models.py  postgres_searcher.py  rag_flow.py  seed_data.json  setup_postgres_database.py  setup_postgres_seeddata.py  update_embeddings.py
src/fastapi_app/: __init__.py  api_models.py  api_routes.py  dependencies.py  embeddings.py  openai_clients.py  postgres_engine.py  postgres_searcher.py  query_rewriter.py  rag_advanced.py  rag_simple.py  seed_data.json  setup_postgres_azurerole.py  setup_postgres_database.py  setup_postgres_seeddata.py  update_embeddings.py
src/fastapi_app/prompts/: answer.txt  query.txt
src/fastapi_app/routes/: api_routes.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/src/: index.tsx
src/frontend/src/api/: api.ts  models.ts
src/frontend/src/components/AnalysisPanel/: AnalysisPanel.tsx
src/frontend/src/components/Answer/: Answer.module.css  Answer.tsx  AnswerParser.tsx
src/frontend/src/components/Example/: Example.module.css  ExampleList.tsx
src/frontend/src/components/QuestionInput/: QuestionInput.tsx
src/frontend/src/components/VectorSettings/: VectorSettings.tsx
src/frontend/src/pages/chat/: Chat.tsx
src/frontend/src/pages/layout/: Layout.module.css  Layout.tsx
(+41 files in other folders)
